# haskell-project-euler

./: README.md  euler.cabal  haskell-project-euler.cabal
src/: Main.hs  Solutions.hs
test/: Tests.hs  test.hs
