name:          haskell-project-euler
version:       0.1
author:        Dan Brooks
maintainer:    dmbrooks@live.co.uk
build-type:    Simple
cabal-version: >=1.8

executable euler
  hs-source-dirs:   src
  main-is:          Solutions.hs
  build-depends:    base, containers
  ghc-options:      -Wall -O3

test-suite test
  type:             exitcode-stdio-1.0
  main-Is:          test.hs
  hs-source-dirs:   src, test
  build-depends:    base >= 4.2 && < 5,
                    tasty >= 0.11 && < 0.12,
                    tasty-hunit >= 0.9 && < 0.10
  ghc-options:      -rtsopts -Wall -fno-warn-unused-do-bind -threaded
  default-language: Haskell98
