name:          haskell-project-euler
version:       0.1
author:        Dan Brooks
maintainer:    dmbrooks@live.co.uk
build-type:    Simple
cabal-version: >=1.8

library
  hs-source-dirs:   src
  build-depends:    base, containers
  exposed-modules:  Solutions
  ghc-options:      -Wall -O3

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  build-depends:    base >= 4.2 && < 5
                  , haskell-project-euler
                  , tasty >= 0.11 && < 0.12
                  , tasty-hunit >= 0.9 && < 0.10
  ghc-options:      -rtsopts -Wall -fno-warn-unused-do-bind -threaded
  default-language: Haskell98
